Created Calender View for date picker, next will make a timetable scrollview for bottom half of screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Gather</string>
+    <string name="feb">Feb</string>
+    <string name="sun">SUN</string>
+    <string name="mon">MON</string>
+    <string name="tue">TUE</string>
+    <string name="wed">WED</string>
+    <string name="thu">THU</string>
+    <string name="fri">FRI</string>
+    <string name="sat">SAT</string>
+    <string name="lessThan">&lt;-</string>
+    <string name="greaterThan">-&gt;</string>
 </resources>
